--- a/index.css
+++ b/index.css
@@ -1,4 +1,111 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Playfair+Display&display=swap');
+
 html, body {
     margin: 0;
     padding: 0;
 }
+
+body {
+    background: #D8EACB;
+    font-family: 'Montserrat', sans-serif;
+}
+
+a {
+    text-decoration: none;
+}
+
+ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+img {
+    width: 100%;
+}
+
+header {
+    display: flex;
+    justify-content: space-between;
+    background: #EEEEEE;
+    padding: .5em;
+}
+
+.logo {
+    color: black;
+    font-weight: bold;
+}
+
+.menu {
+    cursor: pointer;
+}
+
+nav ul {
+    visibility: hidden;
+    opacity: 0;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    background: #72A84A;
+    height: 100vh;
+    padding-top: 5em;
+    z-index: 100;
+}
+
+nav ul li a {
+    color: black;
+    font-size: 1.5em;
+    font-weight: bold;
+    padding: 1em;
+    display: block
+}
+
+.exit a {
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    top: 0;
+    right:0;
+}
+
+.open-nav {
+    visibility: unset;
+    opacity: 1;
+    transform: translateX(0);
+}
+
+.forest-hero {
+    background: url('/images/forest.jpg');
+    background-size: cover;
+    color: white;
+}
+
+.wrapper {
+    padding: .5em;
+    text-align: center;
+}
+
+.no-padding {
+    padding: 0
+}
+
+.subtitle {
+    padding: 3em 0 .5em;
+}
+
+h1 span {
+    display: block;
+}
+
+.cta {
+    display: inline-block;
+    padding: 1em;
+    background:  #72A84A;
+    font-weight: bold;
+    color: white;
+    margin-bottom: 3em;
+    margin-top: 1em;
+}
+
+
