--- a/index.css
+++ b/index.css
@@ -108,4 +108,121 @@ h1 span {
     margin-top: 1em;
 }
 
+ul.featured-cabins {
+    width: 60%;
+    margin: 0 auto;
+}
 
+ul.featured-cabins li {
+    margin-bottom: 3em;
+}
+
+.cabin-img {
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.2);
+}
+
+.cabin-title {
+    font-size: 1.3em;
+    font-weight: bold;
+}
+
+.cabin-desc,
+ul.features li p,
+.left p {
+    line-height: 1.9em;
+    font-size: .8em;
+    margin-bottom: 2em;
+}
+
+.cabin-cta {
+    cursor: pointer;
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+}
+
+.cabin-cta:after{
+    position: absolute;
+    content: '';
+    bottom: -12px;
+    background: white;
+    width: 100%;
+    height: 1px
+}
+
+.cabin-cta span {
+    color: white;
+    font-weight: bold;
+}
+
+.cabin-cta img{
+    width: 10px
+}
+
+.feature-container {
+    background: #1A1A1A;
+    color: white;
+}
+
+ul.features {
+    margin: 3em auto;
+    width: 70%;
+}
+
+ul.features li img {
+    width: 40px;
+}
+
+ul.features li p {
+    color: #CCCCCC;
+}
+
+
+.main-quote {
+    font-family: 'Playfair Display', serif;
+    font-size: 2.2em;
+    font-style: italic;
+    margin-bottom: .5em;
+}
+
+.main-cite {
+    margin-bottom: 3em;
+    display: block;
+}
+
+ul.testimonials {
+    margin: 3em 0;
+}
+
+ul.testimonials li {
+    margin-bottom: 3em;
+}
+
+.test-img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
+
+p.test-desc {
+    font-family: 'Playfair Display', serif;
+    font-style: italic;
+}
+
+p.test-auth {
+    font-weight: bold;
+    font-size: .85em;
+}
+
+.last-container {
+    position: relative;
+}
+
+.fern {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    z-index: 1;
+    width: 80%;
+    opacity: .1
+}
