--- a/index.css
+++ b/index.css
@@ -274,3 +274,54 @@ p.test-auth {
     }
 
 }
+
+@media (min-width: 650px) {
+    ul.features{
+        width: 90%;
+        display: grid;
+        grid-template-columns: repeat(3, auto);
+        grid-gap: 3em;
+    }
+}
+
+@media (min-width: 900px) {
+    .wrapper {
+        text-align: left;
+    }
+    .flex {
+        display: flex;
+    }
+    .hero {
+        padding: 8em 4em;
+    }
+    .last-container {
+        padding: 0 4em;
+    }
+    .main-copy {
+        width: 40%;
+    }
+    p.subtitle {
+        margin: 0 0 1em;
+        padding: 0
+    }
+    h1 {
+        font-size: 3em;
+        margin-top: 0;
+    }
+    ul.featured-cabins {
+        width: 70%
+    }
+
+    .main-quote,
+    .main-cite {
+        text-align: center;
+    }
+    .main-quote {
+        font-size: 3em;
+        margin-top: 2em;
+    }
+    .main-cite {
+        font-size: 1.5em;
+        margin-bottom: 3em;
+    }
+}
