--- a/index.css
+++ b/index.css
@@ -58,7 +58,7 @@ nav ul li a {
     font-size: 1.5em;
     font-weight: bold;
     padding: 1em;
-    display: block
+    display: block;
 }
 
 .exit a {
@@ -66,7 +66,7 @@ nav ul li a {
     height: 30px;
     position: absolute;
     top: 0;
-    right:0;
+    right: 0;
 }
 
 .open-nav {
@@ -76,7 +76,7 @@ nav ul li a {
 }
 
 .forest-hero {
-    background: url('/images/forest.jpg');
+    background: url('images/forest.jpg');
     background-size: cover;
     color: white;
 }
@@ -87,7 +87,7 @@ nav ul li a {
 }
 
 .no-padding {
-    padding: 0
+    padding: 0;
 }
 
 .subtitle {
@@ -96,12 +96,13 @@ nav ul li a {
 
 h1 span {
     display: block;
+    clip-path: polygon(0 100%, 100% 100%, 100% 100%, 0% 100%); 
 }
 
 .cta {
     display: inline-block;
     padding: 1em;
-    background:  #72A84A;
+    background: #72A84A;
     font-weight: bold;
     color: white;
     margin-bottom: 3em;
@@ -118,36 +119,33 @@ ul.featured-cabins li {
 }
 
 .cabin-img {
-    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.2);
+    box-shadow: 10px 10px 10px rgba(0,0,0,.2);
 }
 
 .cabin-title {
-    font-size: 1.3em;
     font-weight: bold;
+    font-size: 1.3em;
 }
 
-.cabin-desc,
-ul.features li p,
-.left p {
+.cabin-desc, ul.features li p, .left p {
     line-height: 1.9em;
     font-size: .8em;
     margin-bottom: 2em;
 }
 
 .cabin-cta {
-    cursor: pointer;
     display: flex;
     justify-content: space-between;
     position: relative;
 }
 
-.cabin-cta:after{
+.cabin-cta:after {
     position: absolute;
     content: '';
     bottom: -12px;
     background: white;
     width: 100%;
-    height: 1px
+    height: 1px;
 }
 
 .cabin-cta span {
@@ -155,9 +153,10 @@ ul.features li p,
     font-weight: bold;
 }
 
-.cabin-cta img{
-    width: 10px
+.cabin-cta img {
+    width: 10px;
 }
+
 
 .feature-container {
     background: #1A1A1A;
@@ -177,7 +176,6 @@ ul.features li p {
     color: #CCCCCC;
 }
 
-
 .main-quote {
     font-family: 'Playfair Display', serif;
     font-size: 2.2em;
@@ -185,7 +183,7 @@ ul.features li p {
     margin-bottom: .5em;
 }
 
-.main-cite {
+cite {
     margin-bottom: 3em;
     display: block;
 }
@@ -199,9 +197,9 @@ ul.testimonials li {
 }
 
 .test-img {
+    border-radius: 50%;
     width: 50px;
     height: 50px;
-    border-radius: 50%;
 }
 
 p.test-desc {
@@ -224,19 +222,19 @@ p.test-auth {
     left: 0;
     z-index: 1;
     width: 80%;
-    opacity: .1
+    opacity: .1;
 }
 
 @media (min-width: 550px) {
-    .menu,
-    .exit {
+    
+    .menu, .exit {
         display: none;
     }
-
+    
     header {
-        padding: 1em
+        padding: 1em;
     }
-
+    
     ul.nav {
         visibility: unset;
         opacity: 1;
@@ -247,116 +245,130 @@ p.test-auth {
         position: unset;
         height: auto;
     }
+    
     ul.nav li a {
         font-size: .9em;
         padding: 0 1em;
         font-weight: normal;
     }
-
+    
     ul.nav li:last-child a {
         padding-right: 0;
     }
-
+    
     ul.nav .active a {
         font-weight: bold;
     }
-
+    
     ul.nav .res a {
         color: #72A84A;
         font-weight: bold;
     }
-
+    
     ul.featured-cabins {
         width: 90%;
         display: grid;
-        grid-template-columns: repeat(3, auto);
+        grid-template-columns: repeat(3,auto);
         grid-gap: 3em;
     }
-
+    
 }
 
-@media (min-width: 650px) {
-    ul.features{
+@media(min-width: 650px) {
+    
+    ul.features {
         width: 90%;
         display: grid;
-        grid-template-columns: repeat(3, auto);
+        grid-template-columns: repeat(3,auto);
         grid-gap: 3em;
     }
 }
 
-@media (min-width: 900px) {
+
+@media(min-width: 900px) {
+    
     .wrapper {
         text-align: left;
     }
+    
     .flex {
         display: flex;
     }
+    
     .hero {
         padding: 8em 4em;
     }
+    
     .last-container {
         padding: 0 4em;
     }
+    
     .main-copy {
         width: 40%;
     }
+    
     p.subtitle {
         margin: 0 0 1em;
-        padding: 0
+        padding: 0;
     }
+    
     h1 {
         font-size: 3em;
         margin-top: 0;
     }
+    
     ul.featured-cabins {
-        width: 70%
+        width: 70%;
     }
-
-    .main-quote,
-    .main-cite {
+    
+    .main-quote, .main-cite {
         text-align: center;
     }
+    
     .main-quote {
         font-size: 3em;
         margin-top: 2em;
     }
+    
     .main-cite {
         font-size: 1.5em;
         margin-bottom: 3em;
     }
-
+    
+    
     .bio {
         width: 90%;
     }
-
+    
     ul.testimonials {
         margin-left: 2em;
-        width: 100%
+        width: 100%;
     }
+    
     ul.testimonials li {
         display: flex;
         background: white;
         padding: 1.5em;
         margin-bottom: 1em;
     }
-
+    
     .test-img {
         margin-right: 1em;
     }
+    
     .test-desc {
         margin-top: .5em;
         font-size: 1.1em;
         margin-bottom: 0;
     }
-
+    
     .fern {
         width: 20%;
     }
-
+    
     .cabin-desc, ul.features li p, .left p {
-         font-size: .9em;
+        font-size: .9em;
     }
-
-
-
+    
+    
 }
