Fixed imaged background

--- a/sub.css
+++ b/sub.css
@@ -3,7 +3,7 @@ body {
 }
 
 .sub-hero {
-    background: url('/images/forest-bg-2.jpg');
+    background: url('images/forest-bg-2.jpg');
     background-size: cover;
     height: 40vh;
 }
